# hitl-mobo-robustness-tests

./: .gitignore  LICENSE  README.md  datasets-extended.json  datasets-provoice.json  datasets.json  pyproject.toml  requirements-eval.txt  requirements.txt  run_chi_pipeline.ps1  run_full_pipeline.ps1  run_full_workflow.bat  run_hier_oracle_all4.ps1  run_provoice_normalized.ps1  run_regeneration.ps1
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
docs/: code-review-2026-06-12.md  external-datasets-2026-06-12.md  oracle-fidelity-experiments-2026-06-12.md
output/: best_oracle_models.json  bo_sensor_error_dataset_effects.csv  bo_sensor_error_ehmi_composite_ei_seed10_baseline_extra_trees.csv  bo_sensor_error_ehmi_composite_ei_seed10_jittered_extra_trees_bias_jit10_std0.05.csv  bo_sensor_error_ehmi_composite_ei_seed10_jittered_extra_trees_bias_jit10_std0.5.csv  bo_sensor_error_ehmi_composite_ei_seed10_jittered_extra_trees_bias_jit10_std1.0.csv  bo_sensor_error_ehmi_composite_ei_seed10_jittered_extra_trees_bias_jit10_std5.0.csv  bo_sensor_error_ehmi_composite_ei_seed10_jittered_extra_trees_bias_jit20_std0.05.csv  bo_sensor_error_ehmi_composite_ei_seed10_jittered_extra_trees_bias_jit20_std0.5.csv  bo_sensor_error_ehmi_composite_ei_seed10_jittered_extra_trees_bias_jit20_std1.0.csv  bo_sensor_error_ehmi_composite_ei_seed10_jittered_extra_trees_bias_jit20_std5.0.csv  bo_sensor_error_ehmi_composite_ei_seed10_jittered_extra_trees_bias_jit40_std0.05.csv  bo_sensor_error_ehmi_composite_ei_seed10_jittered_extra_trees_bias_jit40_std0.5.csv  bo_sensor_error_ehmi_composite_ei_seed10_jittered_extra_trees_bias_jit40_std1.0.csv  bo_sensor_error_ehmi_composite_ei_seed10_jittered_extra_trees_bias_jit40_std5.0.csv  bo_sensor_error_ehmi_composite_ei_seed10_jittered_extra_trees_gaussian_jit10_std0.05.csv  (+2991 more)
(+121 files in other folders)
