[project]
name = "hitl-mobo-robustness-tests"
version = "0.1.0"
description = "Simulation tooling for HITL Bayesian optimization sensor-error robustness studies."
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.4.2",
  "pandas>=2.3.3",
  "scikit-learn>=1.8.0",
  "scipy>=1.17.1",
  "matplotlib>=3.10.8",
  "seaborn>=0.13.2",
  "tqdm>=4.67.1",
  "xgboost>=3.2.0",
  "lightgbm>=4.6.0",
  "catboost==1.2.10",
  "tabpfn>=6.4.1",
  "statsmodels>=0.14.6",
  "botorch>=0.17.2",
  "torch>=2.9.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
