[project]
name = "hitl-mobo-robustness-tests"
version = "0.1.0"
description = "Simulation tooling for HITL Bayesian optimization sensor-error robustness studies."
requires-python = ">=3.13"
# Floors match requirements.txt; exact pins live in requirements-eval.txt.
dependencies = [
  "numpy>=2.4.6",
  "pandas>=3.0.3",
  "scikit-learn>=1.9.0",
  "scipy>=1.17.1",
  "matplotlib>=3.11.0",
  "seaborn>=0.13.2",
  "tqdm>=4.68.2",
  "xgboost>=3.2.0",
  "lightgbm>=4.6.0",
  "catboost>=1.2.10",
  "tabpfn>=8.0.8",
  "statsmodels>=0.14.6",
  "botorch>=0.18.1",
  "torch>=2.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
]
dashboard = [
  "streamlit>=1.58",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
